style.css
* {
  box-sizing: border-box;
  color: ivory;
  font-family: "american typewriter", calibri;
}

body {
  background: black;
  text-align: center;
  margin: auto;
  padding: 0;
  height: 0;
  width: 75vw;
  min-width: 450px;
}

p {
	margin:auto;
}

img{
	width: 100%;
}

.img {
  height: 100%;
}

img.rounded {
  border-radius: 15%;
}

.bgstagger {
	background-color: rgb(50,50,50);
  border-radius: 15%;
	padding: 20px 10px 30px 10px;
  margin: 20px;
}

/*
	link stuffs
*/

a {
	color:lightblue;
}

a:visited {
	color:red;
}

a:hover {
	color:green;
}

a:active {
	color:purple;
}

/* Mobile First Flexbox stuffs */
.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
  margin: 10px;
}

/* 
	Make the blinking cursor work
*/

h1.blink {
	position: relative;
	display: inline-block;
}

h1.blink::after {
  content: "";
  position: absolute;
  right: -5px;
  display: inline-block;
  background-color: #606060;
  width: 2px;
  height: 1em;
  -webkit-animation: blink 1s step-end infinite;
  animation: blink 1s step-end infinite;
}

@-webkit-keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

@keyframes blink {
  0% { opacity: 1.0; }
  50% { opacity: 0.0; }
  100% { opacity: 1.0; }
}

/* Contact Form Design */

form {
  padding-right: 8px;
  /* Fixed small sizing issue on the right */
}

form label {
  display: block;
  padding: 1px;
}

form input, 
form textarea {
  width: 100%;
  max-width: 750px;
  margin-bottom: 20px;
  color: black;
}

form textarea {
  height: 160px;
}

/* ---  Navigation --- */

header nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

header nav ul {
  display: flex;
  flex-direction: row;
  padding-bottom: 0;
}

header nav ul li {
  list-style-type: none;
}

header nav ul li a {
  color: ivory;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:visited {
  color: ivory;
}

header nav ul li a:hover {
  color: #bdbdbd;
}

/* Desktop Version Flexbox stuffs */
@media all and (min-width: 920px) {
  .group {
    flex-direction: row;
  }

  header .group {
    display: flex;
    justify-content: space-between;
    align-content: center;
  }

  header h1 {
    min-width: 371px;
  }

  header nav {
    margin-top: 2.5em;
  }
}

